--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,8 @@ a {text-decoration: none;}
 /* header */
 #header {position: relative; width: 100%; height: 100vh; overflow: hidden; background-color: #96bfe6;}
 
-#header .menu-ico {position: fixed; top: 4%; right: 3%; padding: 30px; cursor: pointer; z-index: 1000;}
-#header .menu {opacity: 0; position: fixed; top: 7%; left: 12%; transform: translateX(-50%); transition: all .3s ease-in; width: 70vw; border-bottom: 1px solid rgba(255, 255, 255, 0.5); z-index: 1000;}
+#header .menu-ico {position: fixed; top: 5%; right: 3%; padding: 30px; cursor: pointer; z-index: 1000;}
+#header .menu {opacity: 0; position: fixed; top: 7%; right: 15%; transform: translateX(-50%); transition: all .3s ease-in; width: 40vw; border-bottom: 1px solid rgba(255, 255, 255, 0.5); z-index: 1000;}
 #header .menu.on {opacity: 1; transform: translateX(0%); transition: all .3s ease-in;}
 #header .menu.on ul > li:nth-child(1) {opacity: 1; transform: translateX(0%); transition: all .3s .6s ease-in;}
 #header .menu.on ul > li:nth-child(2) {opacity: 1; transform: translateX(0%); transition: all .3s .8s ease-in;}
@@ -92,7 +92,7 @@ a {text-decoration: none;}
   }
   .cube {
     position: absolute;
-    right: -20%;
+    right: -15%;
     top: 45%;
     width: 200px;
     height: 200px;
@@ -148,15 +148,15 @@ a {text-decoration: none;}
 #contents .text-box .textC.show {opacity: 1; transition: .5s ease-in-out;}
 
 /* works */
-#contents .works:after {content: ''; width: 100%; height: 100px;background: #f9dd6b; position: absolute; top: -83px; left: 0; transform: skew(0,-5deg); z-index: 100;}
+#contents .works:after {content: ''; width: 100%; height: 200px; background: #f9dd6b; position: absolute; top: -83px; left: 0; transform: skew(0,-5deg); z-index: 100;}
 #contents .works {position: relative; width: 100%; height: 250vh; background-color: #f9dd6b;}
 #contents .works h1 {padding-top: 200px; color: #7a55e7; font-size: 4rem; font-weight: bold; line-height: 8rem; text-align: center;}
-#contents .works .work-btn {position: absolute; left: 12%; transform: translateX(-50%);}
-#contents .works .work-btn a {color: #fff;}
+#contents .works .work-btn {position: absolute; padding-top: 20px; left: 90%; transform: translateX(-50%);}
+#contents .works .work-btn a {color: #fff; line-height: 30px;}
 .hover_wrap {
     position: absolute;
     top: 18%;
-    left: 28%;
+    left: 25%;
     transform: translateX(-50%);
     display: flex;
     flex-direction: column;
@@ -180,21 +180,21 @@ a {text-decoration: none;}
     height: 230px;
     box-sizing: border-box;
     color: #fff;
-    box-shadow: 10px 10px 2px 1px rgba(0, 0, 0, 0.2);
+    box-shadow: 5px 5px 10px 1px rgba(0, 0, 0, 0.5);
     text-align: left;
     padding: 5px 0;
     transition: 1s ease-in-out;
   }
   .hover_wrap .effect figcaption h3 {
-    padding-left: 30px; padding-top: 15px; font: 16px 'NotoSansKR', sans-serif; font-weight: bold;
+    padding-left: 25px; padding-top: 20px; font: 16px 'NotoSansKR', sans-serif; font-weight: bold;
   }
   .hover_wrap .effect figcaption p {
-    padding-left: 30px; padding-right: 30px;  font: 14px 'NotoSansKR', sans-serif; font-weight: 100;
+    padding-left: 25px; padding-right: 30px;  font: 14px 'NotoSansKR', sans-serif; font-weight: 100;
   }
 
   .hover_wrap .effect.show figcaption {
     opacity: 1;
-    width: 45vw;
+    width: 50vw;
     background: rgba(0,0,0,0.5);
     transition: 1s ease-in-out;
   }
