--- a/css/respond.css
+++ b/css/respond.css
@@ -61,8 +61,9 @@
 /* works */
     .button.button--aylen {background: rgba(0, 0, 0, 0.8);}
 
-    #contents .works {height: 300vh;}
-    #contents .works h1 {padding-top: 50px; font-size: 2.5rem; line-height:4rem;}
+    #contents .works:after {height: 150px;}
+    #contents .works {height: 250vh;}
+    #contents .works h1 {padding-top: 100px; font-size: 2.5rem; line-height:4rem;}
 
     .hover_wrap {top: 10%; left: 50%;}
     .hover_wrap .effect {margin: 20px;}
