--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ a {text-decoration: none;}
 #header {position: relative; width: 100%; height: 100vh; overflow: hidden; background-color: #96bfe6;}
 
 #header .menu-ico {position: fixed; top: 5%; right: 3%; padding: 30px; cursor: pointer; z-index: 1000;}
-#header .menu {opacity: 0; position: fixed; top: 7%; right: 15%; transform: translateX(-50%); transition: all .3s ease-in; width: 40vw; border-bottom: 1px solid rgba(255, 255, 255, 0.5); z-index: 1000;}
+#header .menu {opacity: 0; position: fixed; top: 7%; right: 15%; transform: translateX(-50%); transition: all .3s ease-in; width: 70vw; border-bottom: 1px solid rgba(255, 255, 255, 0.5); z-index: 1000;}
 #header .menu.on {opacity: 1; transform: translateX(0%); transition: all .3s ease-in;}
 #header .menu.on ul > li:nth-child(1) {opacity: 1; transform: translateX(0%); transition: all .3s .6s ease-in;}
 #header .menu.on ul > li:nth-child(2) {opacity: 1; transform: translateX(0%); transition: all .3s .8s ease-in;}
@@ -131,7 +131,7 @@ a {text-decoration: none;}
 }
 
 /* contents */
-#contents .about:after {content: ''; width: 100%; height: 200px; background: #f9dd6b; position: absolute; top: -83px; left: 0; transform: skew(0,-5deg); z-index: 100;}
+#contents .about:after {content: ''; width: 100%; height: 200px; background: #f9dd6b; position: absolute; top: -95px; left: 0; transform: skew(0,-5deg); z-index: 100;}
 #contents .about {position: relative; width: 100%; height: 200vh; background-color: #7a55e7;}
 #contents .about h1 {opacity: 0; transition: 1s; padding-top: 150px; color: #fff; font-size: 4rem; font-weight: 500; line-height: 8rem; text-align: center;}
 #contents .about h1.on {opacity: 1; padding-top: 280px; transition: 1s;}
@@ -149,14 +149,14 @@ a {text-decoration: none;}
 #contents .text-box .textC.show {opacity: 1; transition: .5s ease-in-out;}
 
 /* works */
-#contents .works:after {content: ''; width: 100%; height: 200px; background: #f9dd6b; position: absolute; top: -83px; left: 0; transform: skew(0,-5deg); z-index: 100;}
-#contents .works {position: relative; width: 100%; height: 250vh; background-color: #f9dd6b;}
-#contents .works h1 {padding-top: 200px; color: #7a55e7; font-size: 4rem; font-weight: bold; line-height: 8rem; text-align: center;}
-#contents .works .work-btn {position: absolute; padding-top: 20px; left: 90%; transform: translateX(-50%);}
-#contents .works .work-btn a {color: #fff; line-height: 30px;}
+#contents .works:after {content: ''; width: 100%; height: 200px; background: #f9dd6b; position: absolute; top: -100px; left: 0; transform: skew(0,-5deg); z-index: 100;}
+#contents .works {position: relative; width: 100%; height: 240vh; background-color: #f9dd6b;}
+#contents .works h1 {padding-top: 150px; color: #7a55e7; font-size: 4rem; font-weight: bold; line-height: 8rem; text-align: center;}
+#contents .works .work-btn {position: absolute; padding-top: 10px; left: 90%; transform: translateX(-50%);}
+#contents .works .work-btn a {display: block; color: #fff; line-height: 30px; width: auto; padding: .5em 2em;}
 .hover_wrap {
     position: absolute;
-    top: 18%;
+    top: 16%;
     left: 25%;
     transform: translateX(-50%);
     display: flex;
@@ -190,7 +190,7 @@ a {text-decoration: none;}
     padding-left: 25px; padding-top: 20px; font: 16px 'NotoSansKR', sans-serif; font-weight: bold;
   }
   .hover_wrap .effect .figcaption p {
-    padding-left: 25px; padding-right: 30px;  font: 14px 'NotoSansKR', sans-serif; font-weight: 100;
+    padding-left: 25px; padding-right: 30px; font: 14px 'NotoSansKR', sans-serif; font-weight: 100;
   }
 
   .hover_wrap .effect.show .figcaption {
@@ -223,7 +223,7 @@ a {text-decoration: none;}
 
 
 /* contact */
-#contents .contact:after {content: ''; width: 100%; height: 200px;background: #7a55e7; position: absolute; top: -83px; left: 0; transform: skew(0,-5deg); z-index: 100;}
+#contents .contact:after {content: ''; width: 100%; height: 200px;background: #7a55e7; position: absolute; top: -95px; left: 0; transform: skew(0,-5deg); z-index: 100;}
 #contents .contact {position: relative; width: 100%; height: 100vh; background-color: #7a55e7;}
 #contents .contact .inn {width: 1050px; margin: 0 auto;}
 #contents .contact .inn .form-area {width: 350px; position: absolute; top: 48%; left: 50%; transform: translateX(-50%) translateY(-50%);}
